# knotq-app

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
desktop/app/: Cargo.toml  build.rs
desktop/app/assets/app-icon/: knotq-monocurl-logo.mcs
desktop/app/assets/icons/: README.md
desktop/app/src/: app.rs  assets.rs  main.rs  notifications.rs  theme_gpui.rs
desktop/app/src/app/: auto_update.rs  bootstrap.rs  calendar_state.rs  commands.rs  constructor.rs  daily_queue.rs  delete_confirm.rs  editor_mgr.rs  google_oauth.rs  history.rs  nav.rs  node_rename.rs  presence.rs  presence_stub.rs  services.rs  settings.rs  sync_auth.rs  sync_service.rs  workspace_ops.rs
desktop/app/src/app/calendar_state/: drag.rs  occurrences.rs  pointer.rs  popup_commit.rs  popup_open.rs
desktop/app/src/app/commands/: apply.rs  navigation.rs  notifications.rs  undo.rs
desktop/app/src/app/google_oauth/: app_methods.rs  calendar.rs  mod.rs  network.rs  tests.rs
desktop/app/src/app/services/: bus.rs  shutdown.rs  tasks.rs
desktop/app/src/app/sync_auth/: account.rs  flow.rs  tokens.rs
desktop/app/src/app/sync_service/: http.rs  media.rs  snapshot.rs  tasks.rs  ws_lifecycle.rs  ws_socket.rs  ws_transport.rs
desktop/app/src/app/workspace_ops/: google.rs  reconcile.rs  trash.rs
desktop/app/src/notifications/: actions.rs  clearing.rs  common.rs  compute.rs  mod.rs  reconcile.rs  setup.rs
desktop/app/src/views/: daily_queue.rs  editor_context_menu.rs  mod.rs  modals.rs  search.rs  settings.rs  sync_account.rs  sync_disabled.rs  sync_popover.rs  title_bar.rs
desktop/app/src/views/calendar/: layout.rs  mod.rs  month.rs  render_blocks.rs  tasks.rs  week.rs
desktop/app/src/views/date_popover/: actions.rs  fields.rs  mod.rs  render.rs  time.rs
desktop/app/src/views/event_popup/: actions.rs  components.rs  formatting.rs  layer.rs  mod.rs  recurrence.rs  recurrence_tests.rs  render.rs  repeat_menu.rs  repeat_weekdays.rs  scope_dialog.rs  until_calendar.rs
desktop/app/src/views/repeat_popover/: actions.rs  components.rs  mod.rs  recurrence.rs  render.rs  until_calendar.rs
desktop/app/src/views/scheme_view/: controls.rs  glyph.rs  mod.rs  toolbar.rs
desktop/app/src/views/settings/: components.rs  google_calendar.rs  labels.rs  mod.rs  sync_panel.rs
desktop/app/src/views/sidebar/: components.rs  context_menu.rs  drag.rs  mod.rs  render.rs  rows.rs  trash.rs  tree.rs
desktop/app/src/views/title_bar/: search.rs  sync_control.rs  update_control.rs  window_controls.rs
desktop/app/src/views/upcoming/: formatting.rs  mod.rs  render.rs
desktop/auto-update/: Cargo.toml
desktop/auto-update/src/: download.rs  install.rs  lib.rs  manifest.rs
desktop/commands/: Cargo.toml
desktop/commands/src/: command.rs  commit.rs  filter.rs  invariants.rs  lib.rs  receipt.rs  workspace.rs
desktop/commands/src/apply/: batch.rs  folder.rs  item.rs  mod.rs  scheme.rs
desktop/commands/tests/: batch_cmds.rs  batch_tests.rs  commit_tests.rs  filter_tests.rs  folder_cmds.rs  item_cmds.rs  name_invariants.rs  read_only_cmds.rs  roundtrip.rs  scheme_cmds.rs
desktop/commands/tests/support/: mod.rs
desktop/editor/: Cargo.toml
desktop/editor/src/: assets.rs  lib.rs  line_map.rs  scheme_editor.rs  theme_gpui.rs
desktop/editor/src/scheme_editor/: annotations.rs  buffer.rs  clipboard.rs  clipboard_ops.rs  deletion.rs  geometry.rs  input_handler.rs  items.rs  keymap.rs  layout.rs  line_actions.rs  links.rs  markdown.rs  markdown_actions.rs  markers.rs  media.rs  mouse.rs  movement.rs  navigation.rs  painting.rs  render.rs  scrolling.rs  selection.rs  state.rs  table.rs  tests.rs  text_edit.rs  utf16.rs
desktop/editor/src/scheme_editor/buffer/: block_content.rs  row.rs  (+3 more)
desktop/notifications/: Cargo.toml
desktop/notifications/src/: action_payload.rs  actions.rs  compute.rs  format.rs  lib.rs  mock.rs  platform_provider.rs  provider.rs  response.rs  schedule.rs  types.rs
desktop/notifications/src/platform/: linux.rs  macos.rs  macos_delegate.rs  macos_support.rs  windows.rs
desktop/notifications/tests/: action_tests.rs  compute_tests.rs
desktop/state/: Cargo.toml
desktop/state/src/: calendar_state.rs  crdt.rs  daily_queue.rs  dates.rs  dispatch.rs  events.rs  external.rs  lib.rs  notification_state.rs  selection.rs  session.rs  state.rs  store.rs  undo.rs  undo_store.rs
desktop/state/tests/: calendar_state_tests.rs  daily_queue_tests.rs  dispatch_tests.rs  external_tests.rs  store_tests.rs  sync_merge_tests.rs  undo_tests.rs
desktop/state/tests/support/: mod.rs
desktop/storage-json/: Cargo.toml
desktop/storage-json/examples/: load_check.rs  migrate_to_xml.rs  website_seed.rs
desktop/storage-json/src/: cal_index.rs  crdt_state.rs  files.rs  lib.rs  options.rs  paths.rs  schema.rs  scheme_file.rs  scheme_markdown.rs  scheme_xml.rs  secrets.rs  settings.rs  sync_state.rs
desktop/storage-json/src/scheme_xml/: read.rs  shared.rs  write.rs
desktop/storage-json/tests/: roundtrip.rs
shared/l10n/: Cargo.toml  build.rs
shared/l10n/src/: lib.rs  plural.rs
shared/sync/: Cargo.toml
shared/sync/examples/: diagnose_sync.rs  emit_conformance_fixtures.rs
shared/sync/src/: access.rs  crdt.rs  documents.rs  engine.rs  fractional.rs  lib.rs  local_state.rs  persisted_state.rs  user_id.rs
shared/sync/src/crdt/: encoding.rs  mod.rs  scheme_content.rs  tests.rs  validation.rs  workspace_index.rs
shared/sync/src/ws/: client.rs  frames.rs  mod.rs
shared/sync/tests/: account_switch_regressions.rs  account_switch_scenarios.rs  backend_integration.rs  data_loss_hardening.rs  epoch_squash.rs  hard_scenarios.rs  multi_device_convergence.rs  pull_isolation.rs  rich_sync_regressions.rs  sync_convergence_scenarios.rs  sync_default_case_correctness.rs  sync_property_model.rs  sync_regression_repro.rs  sync_stress.rs  sync_wedge_regressions.rs  ws_integration.rs
shared/sync/tests/common/: harness.rs  http_transport.rs  mod.rs  rich_items.rs  scenarios.rs  summaries.rs  test_device.rs  test_device_ops.rs  test_device_sync.rs  test_server.rs  util.rs
(+244 files in other folders)
