[workspace]
members = [
    "desktop/auto-update",
    "desktop/app",
    "desktop/commands",
    "desktop/date-util",
    "desktop/editor",
    "desktop/history",
    "desktop/import",
    "desktop/index",
    "desktop/notifications",
    "desktop/rrule",
    "desktop/state",
    "desktop/storage",
    "desktop/storage-json",
    "desktop/theme",
    "desktop/ui",
    "shared/model",
    "shared/sync",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
semver = "1"
thiserror = "1"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
yrs = "0.26"

knotq-commands = { path = "desktop/commands" }
knotq-auto-update = { path = "desktop/auto-update" }
knotq-date-util = { path = "desktop/date-util" }
knotq-editor = { path = "desktop/editor" }
knotq-history = { path = "desktop/history" }
knotq-import = { path = "desktop/import" }
knotq-index = { path = "desktop/index" }
knotq-model = { path = "shared/model" }
knotq-notifications = { path = "desktop/notifications" }
knotq-rrule = { path = "desktop/rrule" }
knotq-sync = { path = "shared/sync" }
knotq-state = { path = "desktop/state" }
knotq-storage = { path = "desktop/storage" }
knotq-storage-json = { path = "desktop/storage-json" }
knotq-theme = { path = "desktop/theme" }
knotq-ui = { path = "desktop/ui" }

[profile.release]
lto = true
codegen-units = 1
