[package]
name = "knotq-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
knotq-model = { workspace = true }
knotq-sync = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
yrs = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
