[package]
name = "knotq-app"
version = "0.1.0"
edition = "2021"
description = "A structured task and calendar app."
build = "build.rs"

[[bin]]
name = "knotq"
path = "src/main.rs"

[package.metadata.bundle]
name = "KnotQ"
identifier = "com.enigmadux.knotq"
icon = ["desktop/app/assets/app-icon/*.png", "assets/app-icon/*.png"]
category = "public.app-category.productivity"
short_description = "A structured task and calendar app."

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-channel = "2.5.0"
futures = "0.3"
knotq-auto-update = { workspace = true }
knotq-commands = { workspace = true }
knotq-date-util = { workspace = true }
knotq-editor = { workspace = true }
knotq-index = { workspace = true }
knotq-l10n = { workspace = true, features = ["system-locale"] }
knotq-model = { workspace = true }
knotq-rrule = { workspace = true }
knotq-state = { workspace = true }
knotq-sync = { workspace = true }
knotq-notifications = { workspace = true }
knotq-storage-json = { workspace = true }
knotq-theme = { workspace = true }
knotq-ui = { workspace = true }
# WebSocket sync transport (opt-in while it is brought up). rustls backend matches
# the workspace's existing rustls (via ureq), avoiding a second TLS stack.
tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"], optional = true }

[features]
# `accounts` gates sign-in / network sync / billing / subscription functionality.
# It is OFF by default so shipped release builds compile that product surface out
# and show a "Coming soon" placeholder in its place. Local CRDT/sync metadata
# persistence stays compiled in either way so future sync-capable builds can adopt
# release users' existing workspace history. Dev/sandbox builds turn accounts on
# with `--features accounts` (see local/run-app.sh). Turning it on pulls in the
# persistent WebSocket sync transport (`ws-sync`), which falls back to HTTP polling
# when the socket is down.
default = []
accounts = ["ws-sync"]
ws-sync = ["dep:tungstenite"]
