[package]
name = "knotq-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
gpui = "0.2.2"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
knotq-commands = { workspace = true }
knotq-date-util = { workspace = true }
knotq-model = { workspace = true }
knotq-theme = { workspace = true }
knotq-ui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
