[package]
name = "knotq-notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
knotq-commands = { workspace = true }
knotq-date-util = { workspace = true }
knotq-model = { workspace = true }
knotq-rrule = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
objc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Data_Xml_Dom",
    "Foundation",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
