[package]
name = "knotq-storage-json"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
knotq-commands = { workspace = true }
knotq-history = { workspace = true }
knotq-model = { workspace = true }
knotq-storage = { workspace = true }
knotq-sync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
