[package]
name = "knotq-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
knotq-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
yrs = { workspace = true }
