[package]
name = "knotq-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
knotq-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
yrs = { workspace = true }

[dev-dependencies]
# ureq is already a workspace dependency (desktop uses it for sync HTTP calls).
# We reuse it here for the backend_integration tests rather than adding a new dep.
# All other test dependencies (anyhow, serde, uuid, chrono, yrs) are already in
# [dependencies] and are accessible from integration tests in tests/.
knotq-notifications = { workspace = true }
ureq = { workspace = true }
# Real WebSocket client for the ws_integration test (ws:// local backend — no TLS
# feature needed). Exercises knotq_sync::ws against a live `wrangler dev` worker.
tungstenite = "0.23"

[[test]]
name = "backend_integration"
path = "tests/backend_integration.rs"

[[test]]
name = "ws_integration"
path = "tests/ws_integration.rs"
